--- a/frontend/src/app/teams/teams.component.html
+++ b/frontend/src/app/teams/teams.component.html
@@ -1,5 +1,5 @@
-<app-navbar></app-navbar>
 <div class="page-container">
+<app-navbar></app-navbar>
   <app-overlay>
     <div class="new-team-form-container">
       <form
@@ -7,11 +7,11 @@
         [formGroup]="newTeamForm"
         (ngSubmit)="onNewTeamFormSubmit()"
       >
-        <app-text-input
+        <app-text-input class="form-input"
           [control]="$any(newTeamForm.get('name'))"
           label="Name"
         ></app-text-input>
-        <app-text-input
+        <app-text-input class="form-input"
           [control]="$any(newTeamForm.get('description'))"
           label="Description"
         ></app-text-input>
@@ -22,7 +22,6 @@
             id="members"
             formControlName="members"
             (change)="updateSelectedMembers()"
-            multiple
           >
             <option *ngFor="let member of availableMembers" [value]="member.id">
               {{ member.profile.firstName }}
@@ -30,27 +29,29 @@
             </option>
           </select>
         </div>
-
-        <div class="selected-members">
-          <span *ngFor="let member of selectedMembers" class="selected-member">
-            {{ member.profile.firstName }}
-            {{ member.profile.lastName.charAt(0) }}.
-            <button
-              class="remove-member"
-              (click)="removeSelectedMember(member.id)"
-            >
-              X
-            </button>
-          </span>
+        <div class="bottom-section">
+          <div class="selected-members">
+            <span *ngFor="let member of selectedMembers" class="selected-member sub-card">
+              {{ member.profile.firstName }}
+              {{ member.profile.lastName.charAt(0) }}.
+              <button
+                class="remove-member"
+                (click)="removeSelectedMember(member.id)"
+              >
+                X
+              </button>
+            </span>
+          </div>
+          <br />
+          <button
+            class="inputs button"
+            id="modal-submit-btn"
+            type="submit"
+            [disabled]="newTeamForm.invalid"
+          >
+            Submit
+          </button>
         </div>
-        <br />
-        <button
-          class="inputs button"
-          type="submit"
-          [disabled]="newTeamForm.invalid"
-        >
-          Submit
-        </button>
       </form>
     </div>
   </app-overlay>
